<resources>
    <string name="app_name">Court Mzadat</string>
    <string name="court_mzadat">Court Mzadat</string>
    <string name="action_language_switch">العربية</string>
    <string name="title_activity_splash">Mzadat</string>
    <string name="title_activity_deep_link">@string/app_name</string>
    <string name="login_later_skip_to_home_page">Login later, Skip to home page</string>
    <string name="create_account">LOGIN / REGISTER</string>
    <string name="title_activity_login">Login</string>
    <string name="submit">SUBMIT</string>
    <string name="skip_to_home_page">Skip to home page</string>
    <string name="login_register">Login / Register</string>
    <string name="title_activity_dashboard">@string/app_name</string>
    <string name="otp_info">You will receive one time password to your mobile number</string>
    <string name="title_activity_otp_verification">Otp Verification</string>
    <string name="verify_now">VERIFY NOW</string>
    <string name="enter_otp_received_on_phone">Please enter the OTP\nreceived on your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="did_not_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="title_activity_password">Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="please_set_your_npassword_for_future_use">Please set your\npassword for future use</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_of_use">Terms of use?</string>
    <string name="title_activity_profile_photo_registration">Profile Photo</string>
    <string name="upload">UPLOAD</string>
    <string name="skip_now">Skip now</string>
    <string name="take_a_minute_to_upload_a_profile_photo">Take a minute to upload a profile photo</string>
    <string name="approve_permissions_to_open_image_picker">Approve permissions to open image picker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="some_error_occurred_try_again">Some error occurred! Try again</string>
    <string name="search">Search</string>
    <string name="wishing_bids">Wishing Bids</string>
    <string name="winning_bids">Winning Bids</string>
    <string name="my_winning_bids">My Winning Bids</string>
    <string name="winning_amount">Winning Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="paid_on">Paid On</string>
    <string name="my_bids">My Bids</string>
    <string name="my_profile">My Profile</string>
    <string name="retry">Retry</string>
    <string name="nav_auctions">Auctions</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_deposit_amount">Deposit Amount</string>
    <string name="nav_my_bids">My Bids</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_terms_and_conditions">Terms and Conditions</string>
    <string name="read_terms_and_conditions">  Accept Terms and Conditions ( press to Read) </string>
    <string name="nav_company_fees">Management Fee</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_share_this_app">Share this App</string>
    <string name="nav_rate_this_app">Rate this App</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login_register">Login / Register</string>
    <string name="bid_now">Bid Now</string>
    <string name="expired">Expired</string>
    <string name="bid_now_two_lines">Bid\nNow</string>
    <string name="deposit_offline_format">Call %1$s to add deposit amount offline.</string>
    <string name="click_here_to_increase_your_deposit_amount">OR click here to use online payment.</string>
    <string name="click_here_to_increase_your_deposit_amount2">Click here to add deposit amount</string>
    <string name="follow_this_auction">Follow\nThis Auction</string>
    <string name="following_auction">Unfollow\nAuction</string>
    <string name="total_number_of_bids">Total\nNo. of Bids</string>
    <string name="inspection_location_map">INSPECTION LOCATION MAP</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="share_this_bid">SHARE THIS BID</string>
    <string name="inspection_report">INSPECTION REPORT</string>
    <string name="terms_and_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="specification">SPECIFICATION</string>
    <string name="title_activity_slider">View Image</string>
    <string name="place_bid">Place Bid</string>
    <string name="bid_alert_terms_and_conditions">I hereby confirm that I have read all specifications and terms of this auction and I accept it\'s condition</string>
    <string name="minimum_bid_amount_format">Minimum bid amount is %1$s</string>
    <string name="accept_tac_to_place_bid">Please accept the terms and condition to place bid</string>
    <string name="bid_placed">Bid Placed</string>
    <string name="nav_notifications">Notifications</string>
    <string name="logged_out">Logged out</string>
    <string name="title_activity_search">Search</string>
    <string name="search_format">Search: %1$s</string>
    <string name="invalid_credentials2"> For LOGIN: QID and Mobile Number should match.\n\nFor NEW REGISTRATION: QID and Mobile number should not be previously registered</string>
    <string name="invalid_credentials">For LOGIN: QID and Mobile Number should match.\n\nFor NEW REGISTRATION: QID and Mobile number should not be previously registered</string>
    <string name="some_error_occurred">Some error occurred!</string>
    <string name="try_with_diffferent_data">Please try with different details </string>
    <string name="incorrect_otp_please_try_again">Incorrect OTP. Please try again</string>
    <string name="enter_4_digit_otp">Enter 4 digit OTP</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="login">Login</string>
    <string name="can_not_place_bid">Can\'t place bid</string>
    <string name="ok">OK</string>
    <string name="added_to_wish_list">Added to wish list</string>
    <string name="location_not_available">Location not available</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="select_photo">Select photo</string>
    <string name="uploading">Uploading</string>
    <string name="please_connect_to_a_network">Please connect to a network and try again</string>
    <string name="no_internet">No Internet</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="failed">Failed</string>
    <string name="proceed">PROCEED</string>
    <string name="profile">Profile</string>
    <string name="please_enter_your_basic_information">Please enter your basic information</string>
    <string name="otp_resend">OTP resend. Please wait</string>
    <string name="otp_resend2">OTP resend. Please wait</string>
    <string name="enter_qatar_id">Enter Your Qatar ID No.</string>
    <string name="enter_mobile_no">Enter Your Mobile No.</string>
    <string name="before_proceed_message">Please upload the copy of your Qatar ID and add security amount for your account activation. </string>
    <string name="close">Close</string>
    <string name="please_wait">Please wait…</string>
    <string name="sure_exit_now">Sure want to exit now?</string>
    <string name="sure_you_wanna_proceed"> Are you sure you want to proceed? </string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">  إلغاء   </string>
    <string name="account_blocked">Your account with Court Mzadat is blocked. Please contact 50021222 for further support.</string>
    <string name="duplicate_qatar_id">Qatar ID %1$s is already registered</string>
    <string name="duplicate_mobile">Mobile number %1$s is already registered</string>
    <string name="otp_expire_message">Sorry, the OTP is expired. Please click on Resned OTP.</string>
    <string name="three_more_time_msg">Your account with Court Mzadat is blocked as you entered wrong OTP three times.</string>
    <string name="share_content">Hi, I am using Court Mzadat, an auction application in Qatar. You can download it from www.platinummzadat.qa/download</string>
    <string name="share_bid_content">I am using auction app, checkout this ongoing auction. %1$s, %2$s</string>
    <string name="currency_format">QAR: %1$s</string>
    <string name="deposit_amount_required">Deposit Amount required: QAR. %1$s</string>
    <string name="greet_format">Hi, %1$s</string>
    <string name="lastara">Last Login </string>
    <string name="qatar_id_format">Qatar ID: %1$s</string>
    <string name="my_bids_format">%1$d\nMy Bids</string>
    <string name="winning_bids_format">%1$d\nWinning Bids</string>
    <string name="min_increment_format">Minimum Increment\n%1$s</string>
    <string name="end_time_format">End Time\n%1$s</string>
    <string name="start_time_format">Starting Time\n%1$s</string>
    <string name="court_format">Provided by %1$s - Location: %2$s</string>
    <string name="specs_unavailable">Specifications not available</string>
    <string name="restart">Restart</string>
    <string name="restart2">  إعادة بدء   </string>
    <string name="language_change_message">   يحتاج التطبيق إلى إعادة التشغيل لتغيير اللغة. هل تريد تغيير اللغة وإعادة التشغيل الآن؟  </string>
    <string name="change_language">  غير اللغة   </string>
    <string name="feedback">FEEDBACK</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="transmission">Transmission</string>
    <string name="fuel">Fuel</string>
    <string name="key">Key</string>
    <string name="km">KM</string>
    <string name="body_type">Body Type</string>
    <string name="feed_back_cant_be_empty">Feedback can\'t be empty</string>
    <string name="feedback_submitted">Feedback submitted</string>
    <string name="submitting_feedback">Submitting feedback</string>
    <string name="loading">Loading…</string>
    <string name="deposit_amount_format">%1$s QAR\nDeposit Amount</string>
    <string name="qid_upload_failed">QID Upload Failed</string>
    <string name="qid_uploaded">QID Uploaded</string>
    <string name="your_qatar_id">YOUR QATAR ID:</string>
    <string name="qatar_id">Full Name as in Qatar ID</string>
    <string name="qid_upload_status_format">STATUS: %1$s</string>
    <string name="uploaded">Uploaded</string>
    <string name="no_items">No Items</string>
    <string name="total_deposit_amount_format">Total Deposit Amount: QR. %1$s</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="remarks">Remarks</string>
    <string name="amount">Amount</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="no_data_available">No data available</string>
    <string name="profile_photo_uploaded">Profile Photo Uploaded</string>
    <string name="profile_photo_upload_failed">Profile photo upload failed</string>
    <string name="authorisation_letter_upload_failed">Authorisation Letter upload failed</string>
    <string name="authorisation_signee_id_copy_upload_failed">Authorised Bidder ID copy upload failed</string>
    <string name="company_cr_upload_failed">Company CC copy upload failed</string>
    <string name="authorisation_letter_uploaded">Authorisation Letter uploaded</string>
    <string name="authorisation_signee_id_copy_uploaded">Authorised Bidder ID copy uploaded</string>
    <string name="company_cr_uploaded">Company CC copy uploaded</string>
    <string name="email">Email</string>
</resources>